...
            android:id="@+id/fragment_feed_header"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/accent30" />

        <com.wikipedia.feed.view.FeedView
            android:id="@+id/fragment_feed_feed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:minColumnWidth="@dimen/view_feed_min_column_width" />

        <LinearLayout
...
