...
    <string name="offline_load_error_retry">Retry</string>
    <string name="page_error_back_to_main">Go back</string>
    <string name="error_back">Go back</string>
    <string name="menu_clear_all_history">Clear history</string>
    <string name="history_item_deleted">%s removed from history</string>
    <string name="history_items_deleted">%d articles removed from history</string>
    <string name="history_item_delete_undo">Undo</string>
    <string name="notification_archive_undo">Undo</string>
    <string name="app_settings">App settings</string>

    <!-- Saved pages -->
    <string name="dialog_title_clear_history">Clear browsing history</string>
    <string name="dialog_message_clear_history">This will delete all of your browsing history, and close any currently open tabs. Are you sure?</string>
...
    <string name="logged_out_in_background_cancel">Cancel</string>
    <string name="history_empty_title">No recently viewed articles</string>
    <string name="history_empty_message">Track what you\'ve been reading here.</string>
    <string name="history_offline_articles_toast">Some articles in history may not be viewable while offline.</string>
    <string name="search_empty_message">Search and read the free encyclopedia in your language</string>
    <string name="search_empty_message_multilingual_upgrade">Search Wikipedia in more languages</string>
    <string name="delete_selected_items">Delete selected items</string>
    <string name="wp_stylized"><![CDATA[<big>W</big>IKIPEDI<big>A</big>]]></string>
    <string name="create_account_username_hint">Username</string>
    <string name="login_dont_have_account">Don\'t have an account?</string>
    <string name="login_join_wikipedia">Join Wikipedia</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="create_account_already_have">Already have an account?</string>
...
