...
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="?attr/nav_tab_background_color"
        android:elevation="6dp">

        <com.wikipedia.navtab.NavTabLayout
            android:id="@+id/fragment_main_nav_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/nav_tab_background_color"
            app:itemIconTint="?attr/nav_tab_item_color_state"
            app:itemTextColor="?attr/nav_tab_item_color_state"
            app:itemTextAppearanceInactive="@style/BottomNavigationTextAppearanceInactive"
...
